# RAG-service

./: .dockerignore  .env.example  .gitignore  DOCKER.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  debug_container.py  docker-compose.dev.yml  docker-compose.yml  export-deps.sh  forum_manager.py  install_deps.sh  install_hf_deps.sh  load_alaev_direct.py  migrate.py  pyproject.toml  rag_langchain.py  requirements-dev.txt  requirements-final.txt  requirements-hf.txt  requirements.txt  test_alaev.py  test_embeddings.py  test_message_loading.py  test_new_structure.py
.devcontainer/: devcontainer.json
app/: __init__.py  config.py  database.py  imported_models.py  main.py  models.py  schemas.py
app/api/: default.py  openai.py  routes.py
app/services/: knowledge_service.py  openai_service.py  rag_service.py  vector_service.py
docker/: init-pgvector.sql
forum_knowledge_base/: alaev.json  alaev_profile.json  alice_researcher.json  bob_developer.json  charlie_student.json  domen77.json  nechaos.json  nechaos_profile.json  sly32.json
forum_knowledge_base/messages_examples/: alaev_messages.json  domen77_messages.json  nechaos_messages.json  sly32_messages.json
migrations/: env.py
migrations/versions/: 0d8feca6bb00_add_foreign_key_relationships_to_users_.py  294d3841e2d5_add_user_knowledge_table.py  c55bfd491415_create_user_message_examples_table.py
tests/: conftest.py  test_api.py
