[tool.poetry]
name = "rag-manager"
version = "0.1.0"
description = "RAG Manager Service for AI Forum"
authors = [ "AI Forum Team" ]
readme = "README.md"


[[tool.poetry.packages]]
include = "app"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.30.0"
pgvector = "^0.4.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.2"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.0"


[tool.poetry.dependencies.shared-models]
git = "https://github.com/ViachaslauKazakou/shared-models.git@v0.1.3"
rev = "v0.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"


[tool.black]
line-length = 120


[tool.flake8]
max-line-length = 120


[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
